# ChangeLog for app-vim/latexsuite
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/ChangeLog,v 1.25 2007/01/23 16:35:46 genone Exp $

  23 Jan 2007; Marius Mauch <genone@gentoo.org> latexsuite-1.5_rc1.ebuild,
  latexsuite-1.5.ebuild, latexsuite-1.5.20060124.ebuild,
  latexsuite-1.5.20060325.ebuild:
  Replacing einfo with elog

  19 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  latexsuite-1.5.20060124.ebuild:
  Stable on Alpha.

  23 Sep 2006; Markus Rothe <corsair@gentoo.org> latexsuite-1.5_rc1.ebuild,
  latexsuite-1.5.ebuild, latexsuite-1.5.20060124.ebuild,
  latexsuite-1.5.20060325.ebuild:
  Added ~ppc64; bug #148689

  13 Sep 2006; Aron Griffis <agriffis@gentoo.org>
  latexsuite-1.5.20060124.ebuild:
  Mark 1.5.20060124 stable on ia64

  12 Sep 2006; Joshua Jackson <tsunam@gentoo.org>
  latexsuite-1.5.20060124.ebuild:
  Stable x86; bug #132536

  11 Sep 2006; Ferris McCormick <fmccor@gentoo.org>
  latexsuite-1.5.20060124.ebuild:
  Sparc stable (Bug #132536).

  10 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  latexsuite-1.5.20060124.ebuild:
  stable on ppc (Bug #132536)

*latexsuite-1.5.20060325 (09 Sep 2006)

  09 Sep 2006; Tom Martin <slarti@gentoo.org>
  latexsuite-1.5.20060124.ebuild, +latexsuite-1.5.20060325.ebuild:
  Bump to 20060325, resolving bug #133199; mark 20060124 stable on amd64 for
  bug #132536.

*latexsuite-1.5.20060124 (24 Feb 2006)

  24 Feb 2006; Ciaran McCreesh <ciaranm@gentoo.org>
  +latexsuite-1.5.20060124.ebuild:
  New version, thanks to Jorges in bug #122326.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> latexsuite-1.5.ebuild:
  Stable on ppc.

  18 Feb 2005; Tom Martin <slarti@gentoo.org> latexsuite-1.5.ebuild,
  latexsuite-1.5_rc1.ebuild:
  1.5 amd64 stable, 1.5_rc1 amd64 testing.

  30 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> latexsuite-1.5.ebuild:
  Stable on alpha.
