@@ -1,10 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST latexSuite-1.5-rc1.tar.gz 188634 RMD160 c93ceb8b0517cbae253311c792e4392ef58fed91 SHA1 014ba9a755dd116a4e96c878261a5d1f85a22d76 SHA256 9d972ddf13da812dfaa779daceeebb714e2f92d648a700a6dbbc8b8de24e23f1
 DIST latexSuite-1.5.tar.gz 189542 RMD160 968aec5498164ba7652956ef5625b6f67842abf8 SHA1 caecad2e1c6a52d2370cdcd08695f116648726a1 SHA256 231d678ec9194e1f0dc9c997d227cf507a0bce21aaed9bb2c9a9f2981e4d6715
 DIST latexSuite20060124.tar.gz 332811 RMD160 e3cfded382ac9d862265570acb6b5b2865cb1bd8 SHA1 bf4fbbf02287861c6502f123ae9fd99fc59d82a8 SHA256 8e638481e0918c871efc3386bf6eddf7d27ae3cc725f081f83373325b8aca0cc
 DIST latexSuite20060325.tar.gz 217436 RMD160 158534e9686d5732fe2d91128add3bfbdb3d0d1a SHA1 e1bd2982f55f001e4ecf8c79c00bf5fdc521a650 SHA256 bb7d5e427f8026fe391a7bea698480b59f36bcc4497c3b225ecce0e4921e4584
-EBUILD latexsuite-1.5.20060124.ebuild 1056 RMD160 77d97587b6adc9e2fcf2a3141469835ec1cc7f1c SHA1 a5be534f6c03ff490735084a12892e1b7d7034b6 SHA256 64880162f055d39613e37c5643c66925f617898d69636523ec89752dad9ab423
-EBUILD latexsuite-1.5.20060325.ebuild 1061 RMD160 aba4c100b859fd46258f50ed736bb38b614c6654 SHA1 cef4363685e73ec296dfa0f4f49bc6c737f0b17c SHA256 fac78f9952a3b1d10689b47ddb54517d638f052acfd9e7f89b8e5530bdf7c78e
+EBUILD latexsuite-1.5.20060124.ebuild 1057 RMD160 1258e57e46ef2fe6599150b6eed3fbb03afa1356 SHA1 239d6d8fa0db9fe7e56250cb4ec659368b953289 SHA256 38ca9a89b6d9643d7916c72bab556fbc4eb016dd8b2d019242cd054db56010d7
+EBUILD latexsuite-1.5.20060325.ebuild 1062 RMD160 098557c9cacc7847199b5d9f93e5c7e8869b26d0 SHA1 98a6fca054717c4d72aba99960a05efdcfd48330 SHA256 5414886d128eee1f3f7ea8817c7527edaed5ae615d9fa17ce028b03d87e0db60
 EBUILD latexsuite-1.5.ebuild 1162 RMD160 e382a6648064f871b97eb17484cbf461c5f146dd SHA1 aa251813dd4ae8747ee2d34e28a7a34549effc72 SHA256 9aa52fa0efd3343e59e6f49276820a236af79cfb515acecb8679995d70696f5f
 EBUILD latexsuite-1.5_rc1.ebuild 1184 RMD160 0993151e228f91b6278c6f9b9f20642841ce4547 SHA1 92e180cdc1ccf647bb14fe20b8fe45a5e78c8722 SHA256 b5c80f9447f5e7593282c4bc3b72d7602ad396622d87139b4f2f791fa751356b
-MISC ChangeLog 3223 RMD160 ae912fd626a76780507f91e8b9d66d70dac03180 SHA1 32e58caebf2f6138004e901194e99592a3318f8c SHA256 298b06ce50d21ec2052917bae95df67e9cae789eaf9129cc0f30827f7e2915e6
+MISC ChangeLog 3407 RMD160 45110be76e1d960bba94ac7f18b05be00cd40b4b SHA1 81d1781e1c8aa3d38dd98ac4d76b877367d84165 SHA256 84b26e0fb818a1a1f5552f8fa5907eeb6491e95372c99a77c508f75302593af1
 MISC metadata.xml 398 RMD160 d8fd6d829199989a575d34508ac5e3ac1acd8790 SHA1 17baaa2b4f40027f9c1ea7291a718c6f56df81dc SHA256 9fe362639fddb132ef829f83c73f52d01c59adadc616a658e241cab1004e3f98
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAki+M5AACgkQNQqtfCuFneMZ2QCbBmpP2WhQphld6541sGjUoJ0c
+QbUAnj6sn5L1SiZoDcrB9mSdNcaNhCrr
+=1SjN
+-----END PGP SIGNATURE-----
