@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/latexsuite-1.5.20060124.ebuild,v 1.10 2007/07/11 05:14:08 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/latexsuite-1.5.20060124.ebuild,v 1.11 2008/09/03 06:48:57 opfer Exp $
 
 inherit vim-plugin versionator
 
@@ -16,7 +16,7 @@ MY_P="latexSuite$(get_version_component_range 3- )"
 S="${WORKDIR}"
 SRC_URI="http://vim-latex.sourceforge.net/download/${MY_P}.tar.gz"
 
-RDEPEND="virtual/tetex"
+RDEPEND="virtual/latex-base"
 
 VIM_PLUGIN_HELPFILES="latex-suite.txt latex-suite-quickstart.txt latexhelp.txt imaps.txt"
 
