@@ -1,6 +1,10 @@
 # ChangeLog for app-vim/latexsuite
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/ChangeLog,v 1.25 2007/01/23 16:35:46 genone Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-vim/latexsuite/Attic/ChangeLog,v 1.26 2008/09/03 06:48:57 opfer Exp $
+
+  03 Sep 2008; Christian Faulhammer <opfer@gentoo.org>
+  latexsuite-1.5.20060124.ebuild, latexsuite-1.5.20060325.ebuild:
+  replace virtual/tetex with virtual/latex-base for bug 222501
 
   23 Jan 2007; Marius Mauch <genone@gentoo.org> latexsuite-1.5_rc1.ebuild,
   latexsuite-1.5.ebuild, latexsuite-1.5.20060124.ebuild,
